# rust-salvo-ex1

./: Cargo.toml  README.md  spa
hello-world/: package-lock.json
public/: index.html  index2.html
src/: main.rs
