[package]
name = "rust-salvo-ex1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = {version="0.32.0", features = ["serve-static", "compression"]}
tokio = {version="1.21.0", features = ["full"]}
